# COMAssistant

./: COMAssistant.cfg  COMAssistant.ydg  COMRobot.qml  MyMessage.qml  MyText.qml  README.md  main.qml
src/: CMakeLists.txt
src/COMObjects/: CMakeLists.txt  COMCommunication.cpp  COMCommunication.h  COMCommunicationTypedef.h  COMCommunicatorImp.cpp  COMCommunicatorImp.h  COMObjects.h  ReadMe.h  SerialPort.cpp  SerialPort.h  stdafx.cpp  stdafx.h
